--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "My Website"
+title: "My ISSS608"
 description: |
   Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
