--- a/take-home_ex/th_ex2.Rmd
+++ b/take-home_ex/th_ex2.Rmd
@@ -16,18 +16,59 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-## OVERVIEW
+# OVERVIEW
 
 In this take-home exercise, I will do some further analysis and improvement based on my classmate, Yeo Kim Siang's work.
 
+# Getting Started
+
+We will use the following packages in this packages.
+
+```{r}
+packages = c('tidyverse', 'patchwork')
+for(p in packages){
+  if(!require(p, character.only = T)){
+    install.packages(p)
+  }
+  library(p, character.only = T)
+}
+```
+
+```{r, echo = FALSE}
+part_data <- read_csv("data/Participants.csv")
+```
+
+# Grouped Bar Chart
+
+From the existing bar charts of householdSize and haveKids, we can speculate that if household size equals to 3, there would be a kid in the household. We will use the grouped bar chart to verify that.
+
+```{r}
+ggplot(part_data, aes(fill = haveKids, x=householdSize)) + 
+    geom_bar(position="dodge", stat="count") +
+    geom_text(stat = 'count', aes(label = stat(count)), vjust = -0.5, size = 3)
+```
+
+From the bar chart above, we can confirm that there's no kids within the households which contain only 1 or 2 members.
+
+# Scatter Plot for haveKids and educationLevel
+
+```{r}
+p1 <- ggplot(part_data, aes(x=haveKids, y=educationLevel)) + 
+  geom_jitter()
+
+p2 <- ggplot(part_data, aes(x=haveKids, y=interestGroup)) + 
+  geom_jitter()
+
+p1 + p2
+```
 
 
+# Would it be more joyful if having kids?
 
-Distill is a publication format for scientific and technical writing, native to the web. 
+```{r}
+ggplot(part_data, aes(fill = haveKids, x = joviality)) +
+  geom_density(position = "dodge")
+```  
 
-Learn more about using Distill for R Markdown at <https://rstudio.github.io/distill>.
-
-
-
-
+From the plot above, we can see that the closer to 1 the higher density for the group which has kids. In the meantime, the lower the joviality, the higher the density for the group which does not have kids.
 
