--- a/docs/In-class Exercise/In-Class Exercise 4.Rmd
+++ b/docs/In-class Exercise/In-Class Exercise 4.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "In-class Exercise 4"
 description: |
-  A new article created using the Distill format.
+  
 author:
   - name: Chu Yi Ning 
-    url: https://example.com/norajones
+    url: https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile
     affiliation: SMU SCIS
-    affiliation_url: https://example.com/spacelysprokets
+    affiliation_url: https://scis.smu.edu.sg/
 date: "`r Sys.Date()`"
 output: distill::distill_article
 ---
