--- a/docs/take-home_ex/th_ex3.Rmd
+++ b/docs/take-home_ex/th_ex3.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # Getting Started
 
 ```{r}
-packages = c('tidyverse', 'patchwork', 'dplyr')
+packages = c('tidyverse', 'patchwork', 'dplyr', 'lubridate')
 for(p in packages){
   if(!require(p, character.only = T)){
     install.packages(p)
@@ -32,12 +32,13 @@ for(p in packages){
 
 ## Data Cleaning
 
-```{r, echo = FALSE}
+```{r}
 data <- read_csv("data/FinancialJournal.csv")
+dim(data)
 ```
 ### Order by Participant ID
 ```{r}
-data <- data[order(data$participantId),]
+data_orderBypart <- data[order(data$participantId),]
 ```
 
 
@@ -45,8 +46,30 @@ We can see there are some duplicates for Shelter and Education.
 
 
 ```{r, echo=FALSE}
-head(data, 5)
+head(data_orderBypart, 5)
 ```
+
+
+distinct function in dplyr will be used to remove duplicates
+
+```{r}
+data_clean <- data %>% distinct(participantId, timestamp, category, amount,
+                   .keep_all = TRUE)
+head(data_clean, 10)
+dim(data_clean)
+```
+
+There are 1113 duplicates in total.
+
+### Add a new column Month which extract month from timestamp
+```{r}
+data_clean['month'] <- month(data_clean$timestamp)
+```
+
+```{r, echo = FALSE}
+head(data_clean, 5)
+```
+
 
 
 
