--- a/docs/take-home_ex/th_ex3.Rmd
+++ b/docs/take-home_ex/th_ex3.Rmd
@@ -146,6 +146,23 @@ p1 <- ggplot(data_tidy3, aes(x = yearmonth, y = value, colour = variable)) +
 ggplotly(p1)
 ```
 
+```{r}
+data_filter <- data_clean %>%
+  select(participantId, timestamp, category, amount, yearmonth) %>%
+  filter(category == 'Wage' & yearmonth == 'Mar 2022' )
+```
+
+```{r}
+data_filter2 <- data_clean %>%
+  select(participantId, timestamp, category, amount, yearmonth) %>%
+  filter(category == 'Wage' & yearmonth == 'Apr 2022' )
+```
+
+```{r}
+data_filter3 <- data_clean %>%
+  select(participantId, timestamp, category, amount, yearmonth) %>%
+  filter(category == 'Wage' & participantId == '0' )
+```
 
 
 
